--- a/task1/task1.html
+++ b/task1/task1.html
@@ -243,6 +243,16 @@
       effective in determining optimal routes. Formally defined in RFC 792,
       ICMP sets standards for its implementation and usage within networks.
     </p>
+    <p>
+      IPv4 (Internet Protocol version 4) is the fourth iteration of the Internet Protocol (IP) 
+      and one of the primary protocols used for identifying and routing data packets across networks. 
+      It is a core protocol of the TCP/IP suite and serves as the foundation for internet communication.
+    </p>
+    <p>
+      Ethernet is a widely used family of computer networking technologies used in local area networks (LANs) 
+      for connecting devices within a limited geographical area, such as within a building, campus, or home. 
+      It defines the standards for the physical and data link layers of the OSI model and is fundamental to modern networking.
+    </p>
 
     <h3>task 2.6</h3>
     <img style="width: 700px; height: 500px" src="image/task2.6_1.png" alt="" />
@@ -290,6 +300,11 @@
 
       <tr>
         <td>SSH</td>
+        <td>Application Layer</td>
+      </tr>
+
+       <tr>
+        <td>SSHv2</td>
         <td>Application Layer</td>
       </tr>
 
