--- a/task1/task1.html
+++ b/task1/task1.html
@@ -181,7 +181,7 @@
     </tr>
     <tr>
       <td>SSL (Secure Sockets Layer)</td>
-      <td>Transport Layer</td>
+      <td>Presentation Layer</td>
     </tr>
     <tr>
       <td>TCP (Transmission Control Protocol)</td>
