--- a/task2/index.html
+++ b/task2/index.html
@@ -5,33 +5,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task2</title>
+
+    <style>
+        img {
+            padding: 10px 10px 10px 10px;
+        }
+
+        .screenshots {
+            text-align: center;
+        }
+    </style>
 </head>
 
-<body>
-    <div class="wrapper" style="width: 600px; height: 600px;">\
-        <p>task 2.1</p>
-        <img style="width: 600px; height: 600px;" src="image/task2_2.1good.png" alt="">
-        <img style="width: 600px; height: 600px;" src="image/task2_2.1wireshark.png" alt="">
-        <img style="width: 600px; height: 600px;" src="image/2_2.1wireshark.png" alt="">
-        <p>task 2.2</p>
-        <img style="width: 600px; height: 600px;" src="image/task2_2.2good.png" alt="">
-        <p>task 2.3</p>
-        <img style="width: 600px; height: 600px;" src="image/task2_2.3.png" alt="">
-        <p>task 2.4</p>
-        <img style="width: 600px; height: 600px;" src="image/task2_2.4good1.png" alt="">
-        <img style="width: 600px; height: 600px;" src="image/task2_2.4good.png" alt="">
-        <p>task 2.5</p>
-        <img style="width: 700px; height: 200px;" src="image/2_2.5good.png" alt="">
-        <p>task 2.6</p>
-        <img style="width: 700px; height: 600px;" src="image/task2_2.6_release1.png" alt="">
-        <img style="width: 700px; height: 600px;" src="image/task2_2.6_release2.png" alt="">
-        <img style="width: 700px; height: 600px;" src="image/task2_2.6_renew1.png" alt="">
-        <img style="width: 700px; height: 600px;" src="image/task2_2.6_renew2.png" alt="">
-        <p>task 2.7</p>
-        <img style="width: 700px; height: 600px;" src="image/task2_2.7_1.png" alt="">
-        <img style="width: 700px; height: 600px;" src="image/task2_2.7_2.png" alt="">
+<body style="background-color: rgb(4, 4, 49); color:white; padding: 50px 50px;">
+
+    <div class="theory">
+        <h1 style="text-transform: uppercase; padding-bottom: 50px; text-align: center;">Theoretical Part</h1>
+        <h1>Task 1.1</h1>
+        <p></p>
+        <h1>Task 1.2</h1>
+        <p></p>
+        <h1>Task 1.3</h1>
+        <p></p>
+        <h1>Task 1.4</h1>
+        <p></p>
+        <h1>Task 1.5</h1>
+        <p></p>
+        <h1>Task 1.6</h1>
+        <p>
+            BOOTP is an internet protocol that lets a network user automatically be configured to receive an IP address and have an operating system booted without user involvement.
+        </p>
+        <h1>Task 1.7</h1>
+        <p>
+            A virtual LAN (VLAN) is a logical overlay network that groups together a subset of devices that share a
+            physical LAN, isolating the traffic for each group.
+            A VLAN, like the LAN it sits atop, operates at Layer 2 of the network, the Ethernet level. 
+            <br>
+            VLANs partition a single switched network into a set of overlaid virtual networks that can meet different functional and security requirements. This partitioning avoids the need to have multiple, distinct physical networks for different use cases.
 
 
+            <br>
+            <br>
+            Network engineers use VLANs for multiple reasons, including the following:
+        <ul>
+            <li>to improve performance</li>
+            <li>to tighten security</li>
+            <li>to ease administration</li>
+        </ul>
+
+
+
+        </p>
+    </div>
+
+    <div class="screenshots">
+        <h1 style="text-transform: uppercase; padding-bottom: 50px;">Practical Part</h1>
+        <h1>Task 2.1</h1>
+        <img style="width: 800px; height: 500px;" src="image/task2_2.1good.png" alt="">
+        <img style="width: 800px; height: 400px;" src="image/task2_2.1wireshark.png" alt="">
+        <img style="width: 800px; height: 500px;" src="image/2_2.1wireshark.png" alt="">
+        <h1>Task 2.2</h1>
+        <img style="width: 800px; height: 600px;" src="image/task2_2.2good.png" alt="">
+        <h1>Task 2.3</h1>
+        <img style="width: 800px; height: 500px;" src="image/task2_2.3.png" alt="">
+        <h1>Task 2.4</h1>
+        <img style="width: 800px; height: 600px;" src="image/task2_2.4good1.png" alt="">
+        <img style="width: 800px; height: 600px;" src="image/task2_2.4good.png" alt="">
+        <h1>Task 2.5</h1>
+        <img style="width: 800px; height: 100px;" src="image/2_2.5good.png" alt="">
+        <h1>Task 2.6</h1>
+        <img style="width: 800px; height: 600px;" src="image/task2_2.6_release1.png" alt="">
+        <img style="width: 800px; height: 200px;" src="image/task2_2.6_release2.png" alt="">
+        <img style="width: 800px; height: 500px;" src="image/task2_2.6_renew1.png" alt="">
+        <img style="width: 800px; height: 200px;" src="image/task2_2.6_renew2.png" alt="">
+        <h1>Task 2.7</h1>
+        <img style="width: 1000px; height: 600px;" src="image/task2_2.7_1.png" alt="">
+        <img style="width: 1000px; height: 700px;" src="image/task2_2.7_2.png" alt="">
     </div>
 
 </body>
