Theory to task2

--- a/task3/index.html
+++ b/task3/index.html
@@ -14,11 +14,16 @@
         .screenshots {
             text-align: center;
         }
+        .theory {
+            text-align: center;
+        }
     </style>
 </head>
 <body style="background-color: rgb(4, 4, 49); color:white; padding: 50px 50px;">
     <div class="theory">
         <h1 style="text-transform: uppercase; padding-bottom: 50px; text-align: center;">Theoretical Part</h1>
+
+        <h1>Task 1.1</h1>
     </div>
 
     <div class="screenshots">
