--- a/task3/index.html
+++ b/task3/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,20 +11,37 @@
             height: 500px;
             padding: 10px 10px 10px 10px;
         }
-        
+
         .screenshots {
             text-align: center;
         }
+
         .theory {
             text-align: center;
         }
     </style>
 </head>
+
 <body style="background-color: rgb(4, 4, 49); color:white; padding: 50px 50px;">
     <div class="theory">
         <h1 style="text-transform: uppercase; padding-bottom: 50px; text-align: center;">Theoretical Part</h1>
 
         <h1>Task 1.1</h1>
+        <div class="ip">
+            <p>IP addresses are the identifier that allows information to be sent between devices on a network: they contain location information and make devices accessible for communication. The internet needs a way to differentiate between different computers, routers, and websites. IP addresses provide a way of doing so and form an essential part of how the internet works. An IP address is a string of numbers separated by periods. IP addresses are expressed as a set of four numbers — an example address might be 192.158.1.38. Each number in the set can range from 0 to 255. So, the full IP addressing range goes from 0.0.0.0 to 255.255.255.255.</p>
+        </div>
+
+        <div class="network-subnets">
+            <p>A subnet, or subnetwork, is a network inside a network. Subnets make networks more efficient. Through subnetting, network traffic can travel a shorter distance without passing through unnecessary routers to reach its destination.</p>
+        </div>
+        <div class="network-classes"></div>
+        <div class="network-mask"></div>
+        <div class="routing-table"></div>
+        <div class="default-gateway"></div>
+        <div class="broadcast"></div>
+        <div class="subnet-address"></div>
+        <div class="private-network-address"></div>
+        <div class="network-address-translation"></div>
     </div>
 
     <div class="screenshots">
@@ -49,14 +67,30 @@
         <img src="image/2.5_2.png" alt="">
 
         <h1>Task 2.6</h1>
-        <img src="" alt="">
+        <h2>local network</h2>
+        <img src="image/myip1.png" alt="">
+        <img src="image/myip2.png" alt="">
+        <h2>onet.pl</h2>
+        <img src="image/onet1.png" alt="">
+        <img src="image/onet2.png" alt="">
+        <h2>google.com</h2>
+        <img src="image/googlecom1.png" alt="">
+        <img src="image/googlecom2.png" alt="">
+        <h2>google.pl</h2>
+        <img src="image/googlepl1.png" alt="">
+        <img src="image/googlepl2.png" alt="">
+        <h2>lodman.pl</h2>
+        <img src="image/lodman1.png" alt="">
+        <img src="image/lodman2.png" alt="">
 
         <h1>Task 2.7</h1>
         <img src="" alt="">
 
         <h1>Task 2.8</h1>
-        <img src="" alt="">
-        
+        <img src="image/2.8_1.png" alt="">
+        <img src="image/2.8_2.png" alt="">
+
     </div>
 </body>
+
 </html>
