--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
   <p class="title">Network Technologies</p>
-  <p class="authors"><strong>Team 14</strong><br>Wojciech Mokwinski 247033 Tymoteusz Piwowarski 222222</p>
+  <p class="authors">Wojciech Mokwinski 247033 Tymoteusz Piwowarski 247039</p>
   <h2>Choose a Task:</h2>
   <div>
     <a href="task1/index.html">Task 1</a>
