--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
   <div>
     <a href="task1/index.html">Task 1</a>
     <a href="task2/index.html">Task 2</a>
+    <a href="task3/index.html">Task 3</a>
+    <a href="https://nt-task4.netlify.app">Task 4</a>
+
   </div>
 </body>
 </html>
